--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="reset.css" />
@@ -35,17 +35,32 @@
           <li class="about-list-item">
             <img class="about-list-item-img" src="./ia.jpg" alt="" />
             <div class="about-list-item-wrapp">
-              <h3 class="about-list-item-title">rtsu</h3>
-              <p class="about-list-item-text">yyikjx</p>
-              <p class="about-list-item-text">ckux</p>
+              <h3 class="about-list-item-title">Матвійчук Ія</h3>
+              <p class="about-list-item-text">
+                - Художня школа 4 роки <br />- Кулінарний гурток 2 роки <br />-
+                Танці 2 роки <br />
+                - Плавання 4 роки
+              </p>
+              <p class="about-list-item-text">
+                Перший пункт дає поняття, що робітник досвідчений у сфері
+                малювання, і це допомагає створювати неперевершені ідеї
+              </p>
             </div>
           </li>
           <li class="about-list-item">
             <img class="about-list-item-img" src="./ma.jpg" alt="" />
             <div class="about-list-item-wrapp">
-              <h3 class="about-list-item-title">яарп</h3>
-              <p class="about-list-item-text">пврчо</p>
-              <p class="about-list-item-text">гворачыпия</p>
+              <h3 class="about-list-item-title">Гончарова Марі</h3>
+              <p class="about-list-item-text">
+                - Займалась танцями 3 роки. <br />
+                - Ходила до музичної школи 9 років. <br />
+                - До художньої 5, дизайну навчалась рік.
+              </p>
+              <p class="about-list-item-text">
+                Саме останній пункт показує що робітник, досвідчений у сфері
+                дизайну, і це допомагає створювати креативні та неперевершені
+                проекти
+              </p>
             </div>
           </li>
         </ul>
@@ -61,8 +76,12 @@
             співробітником. Ми постійно розвиваємо наші навички і знання
           </p>
         </div>
+      
       </section>
     </main>
+    <footer class="footer">
+      <img class="footer-img" src="./logo.png" alt="logo">
+      <a href="http://t.me/mmaarryysh">Наш телеграм: @marrysh</a>
+    </footer>
   </body>
 </html>
-<!-- я устала -->
